--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-  font-family: Pangaia;
-  src: url(../components/assets/Pangaia.otf);
-}
-
-@font-face {
-  font-family: Avgardd;
-  src: url(../components/assets/AVGARDD.woff);
-}
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -26,6 +18,18 @@
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+button, a {
+  font-family: "Lexend", sans-serif;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -36,26 +40,6 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-.avgardd {
-  font-family: Avgardd, sans-serif !important;
-}
-
-.pangaia {
-  font-family: Pangaia, sans-serif !important;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-span {
-  font-family: Pangaia, sans-serif !important;
-}
-
 header .link {
   position: relative;
 }
@@ -63,29 +47,57 @@ header .link {
 header .link a {
   z-index: 20;
   position: relative;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 header .link::after {
-  content:"";
+  content: "";
   position: absolute;
   bottom: 0%;
   left: -5%;
   width: 24px;
   height: 24px;
-  background: rgb(88 28 135);
+  background: #581c87;
   z-index: 0;
   border-radius: 1rem;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   padding: 5px 0px;
 }
-
 
 header .link:hover::after {
   bottom: 0%;
   left: 25%;
 }
 
-header .link:hover a  {
+header .link:hover a {
   color: white;
+}
+
+/* Target the date input field */
+input[type="date"] {
+  /* Your custom styles for the date input */
+  color: #aaa;
+  /* Text color */
+  background-color: #0a0a0a; /* Background color */
+  outline: none;
+}
+
+/* Target the placeholder text inside the date input */
+input[type="date"]::placeholder {
+  color: #ccc; /* Placeholder text color */
+}
+
+/* Target the calendar icon for the date input (might not work in all browsers) */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* Invert the color of the calendar icon */
+}
+
+/* Additional styles to adjust the appearance in Firefox */
+input[type="date"]::-moz-placeholder {
+  color: #ccc; /* Placeholder text color for Firefox */
+}
+
+/* Additional styles for Firefox's calendar button */
+input[type="date"]::-moz-calendar-box {
+  filter: invert(1); /* Invert the color of the calendar icon in Firefox */
 }
